maybe final change

--- a/audiotest.html
+++ b/audiotest.html
@@ -7,7 +7,23 @@
 </head>
 <body>
     <audio controls>
-        <source src=".\assets\music\the-weeknd_-_blinding-lights.mp3" type="audio/mpeg">
+        <source src="./assets/music/the-weeknd_blinding-lights.mp3" type="audio/mpeg">
+        Ваш браузер не поддерживает аудио элемент.
+    </audio>
+    <audio controls>
+        <source src="./assets/music/Imagine-Dragons_Bones.mp3" type="audio/mpeg">
+        Ваш браузер не поддерживает аудио элемент.
+    </audio>
+    <audio controls>
+        <source src="./assets/music/Kino_gruppa_krovi.mp3" type="audio/mpeg">
+        Ваш браузер не поддерживает аудио элемент.
+    </audio>
+    <audio controls>
+        <source src="./assets/music/Lil-Peep_Sex-With-My-Ex.mp3" type="audio/mpeg">
+        Ваш браузер не поддерживает аудио элемент.
+    </audio>
+    <audio controls>
+        <source src="./assets/music/The-Real_Slim-Shady.mp3" type="audio/mpeg">
         Ваш браузер не поддерживает аудио элемент.
     </audio>
 </body>
